Simplified default login paths removing auth/

--- a/nbs/00_auth.ipynb
+++ b/nbs/00_auth.ipynb
@@ -181,7 +181,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/auth.py#L40){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L29){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### hash_password\n",
        "\n",
@@ -197,7 +197,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/auth.py#L40){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L29){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### hash_password\n",
        "\n",
@@ -270,7 +270,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/auth.py#L48){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### verify_password\n",
        "\n",
@@ -287,7 +287,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/auth.py#L48){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### verify_password\n",
        "\n",
@@ -403,7 +403,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/auth.py#L61){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L67){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### init_auth_tables\n",
        "\n",
@@ -419,7 +419,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/LotsOfOrg/launch-kit/blob/main/launch_kit/auth.py#L61){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L67){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### init_auth_tables\n",
        "\n",
@@ -651,7 +651,59 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L222){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### check_permission\n",
+       "\n",
+       ">      check_permission (user:__main__.User, required_role:str)\n",
+       "\n",
+       "*Check if a user has the required role or higher.\n",
+       "\n",
+       "Role hierarchy:\n",
+       "- 'admin' has all permissions\n",
+       "- 'user' has basic permissions\n",
+       "- Custom roles can be added as needed*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| user | User | The User object to check |\n",
+       "| required_role | str | The required role |\n",
+       "| **Returns** | **bool** | **True if user has permission, False otherwise** |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/LotsOfOrg/ship-kit/blob/main/ship_kit/auth.py#L222){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### check_permission\n",
+       "\n",
+       ">      check_permission (user:__main__.User, required_role:str)\n",
+       "\n",
+       "*Check if a user has the required role or higher.\n",
+       "\n",
+       "Role hierarchy:\n",
+       "- 'admin' has all permissions\n",
+       "- 'user' has basic permissions\n",
+       "- Custom roles can be added as needed*\n",
+       "\n",
+       "|    | **Type** | **Details** |\n",
+       "| -- | -------- | ----------- |\n",
+       "| user | User | The User object to check |\n",
+       "| required_role | str | The required role |\n",
+       "| **Returns** | **bool** | **True if user has permission, False otherwise** |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_doc(check_permission)"
    ]
@@ -952,7 +1004,7 @@
    "source": [
     "#| eval: false\n",
     "from fasthtml.common import *\n",
-    "from launch_kit.auth import user_auth_before\n",
+    "from ship_kit.auth import user_auth_before\n",
     "\n",
     "# Configure authentication beforeware\n",
     "beforeware = Beforeware(\n",
@@ -1241,7 +1293,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ User creation successful\n",
+      "✓ Duplicate prevention working\n",
+      "✓ Get user by ID working\n",
+      "✓ Get user by email working\n",
+      "✓ Get user by username working\n",
+      "✓ Authentication working\n",
+      "✓ User update working\n",
+      "✓ Password update working\n",
+      "✓ Availability checks working\n",
+      "✓ Permission checks working\n",
+      "✓ Login tracking working\n",
+      "✓ User deletion working\n",
+      "\n",
+      "✅ All database tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "import tempfile\n",
@@ -1501,7 +1574,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Store this in database: $2b$12$Uc9STWyfe7VPm...\n",
+      "Store this in database: $2b$12$J7K88iTYaU2pD...\n",
       "✅ Login successful!\n",
       "❌ Invalid credentials rejected\n"
      ]
@@ -1616,7 +1689,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated token: 42:BahBYB7XQDacMaEcg...\n",
+      "Generated token: 42:l97Cko11shUwHASMC...\n",
       "✅ Valid token for user 42\n",
       "❌ Tampered tokens are rejected\n"
      ]
@@ -1694,7 +1767,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server running at http://localhost:8000\n",
+      "\n",
+      "Test credentials:\n",
+      "- Email: test@example.com\n",
+      "- Password: password123\n"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "from fasthtml.common import *\n",
@@ -2109,9 +2213,9 @@
       "Password hashing performance by cost factor:\n",
       "  Cost 10: 0.042s (recommended: No)\n",
       "  Cost 11: 0.084s (recommended: No)\n",
-      "  Cost 12: 0.178s (recommended: Yes)\n",
-      "  Cost 13: 0.367s (recommended: Yes)\n",
-      "  Cost 14: 0.668s (recommended: No)\n",
+      "  Cost 12: 0.180s (recommended: Yes)\n",
+      "  Cost 13: 0.338s (recommended: Yes)\n",
+      "  Cost 14: 0.667s (recommended: No)\n",
       "\n",
       "Password verification performance:\n",
       "  Average verification time: 0.167s\n",
@@ -2120,7 +2224,7 @@
       "Token operations performance:\n",
       "  Token creation: 0.002ms\n",
       "  Token verification: 0.000ms\n",
-      "  Operations per second: 446203\n",
+      "  Operations per second: 437362\n",
       "\n",
       "✓ Performance benchmarks completed\n"
      ]
