--- a/nbs/01_routes_auth.ipynb
+++ b/nbs/01_routes_auth.ipynb
@@ -319,7 +319,7 @@
     "                              name='password', \n",
     "                              type='password', \n",
     "                              required=True),\n",
-    "                    A('Forgot password?', href='/auth/forgot-password', \n",
+    "                    A('Forgot password?', href='/forgot-password', \n",
     "                      cls='text-sm text-primary hover:underline mt-1 block'),\n",
     "                    cls='space-y-1'\n",
     "                ),\n",
@@ -456,7 +456,7 @@
     "                ),\n",
     "                P(\n",
     "                    \"Already have an account? \",\n",
-    "                    A('Sign in', href='/auth/login', cls='text-primary hover:underline'),\n",
+    "                    A('Sign in', href='/login', cls='text-primary hover:underline'),\n",
     "                    cls='text-center text-sm mt-4'\n",
     "                ),\n",
     "                cls='max-w-md mx-auto mt-8'\n",
@@ -570,7 +570,7 @@
     "        ),\n",
     "        P(\n",
     "            \"Already have an account? \",\n",
-    "            A('Sign in', href='/auth/login', cls='text-primary hover:underline'),\n",
+    "            A('Sign in', href='/login', cls='text-primary hover:underline'),\n",
     "            cls='text-center text-sm mt-4'\n",
     "        ),\n",
     "        cls='max-w-md mx-auto mt-8'\n",
@@ -602,8 +602,8 @@
    "source": [
     "#| export\n",
     "def logout_route(rt, # FastHTML router instance\n",
-    "                 path='/auth/logout',\n",
-    "                 redirect_to='/auth/login',\n",
+    "                 path='/logout',\n",
+    "                 redirect_to='/login',\n",
     "                 session_key='auth',\n",
     "                 before_logout=None):\n",
     "    \"\"\"Create a logout route that clears the session.\n",
@@ -612,8 +612,8 @@
     "    \n",
     "    Args:\n",
     "        rt: FastHTML router instance (from fast_app())\n",
-    "        path: Route path (default: '/auth/logout')\n",
-    "        redirect_to: Where to redirect after logout (default: '/auth/login')\n",
+    "        path: Route path (default: '/logout')\n",
+    "        redirect_to: Where to redirect after logout (default: '/login')\n",
     "        session_key: Session key to clear (default: 'auth')\n",
     "        before_logout: Optional callback function(session) called before logout\n",
     "    \"\"\"\n",
@@ -759,13 +759,13 @@
     "def home(sess):\n",
     "    user = sess.get('auth')\n",
     "    if not user:\n",
-    "        return RedirectResponse('/auth/login', status_code=303)\n",
+    "        return RedirectResponse('/login', status_code=303)\n",
     "    \n",
     "    return Container(\n",
     "        Card(\n",
     "            H1(f\"Welcome, {user.get('name', 'User')}!\"),\n",
     "            P(f\"You are logged in as {user['email']}\"),\n",
-    "            Button('Logout', hx_get='/auth/logout', hx_push_url='true'),\n",
+    "            Button('Logout', hx_get='/logout', hx_push_url='true'),\n",
     "            cls='max-w-2xl mx-auto mt-8'\n",
     "        )\n",
     "    )\n",
@@ -773,9 +773,9 @@
     "# Run the demo server\n",
     "print(\"Starting demo server...\")\n",
     "print(\"\\nDemo app routes:\")\n",
-    "print(\"- http://localhost:8000/auth/login - Login page\")\n",
-    "print(\"- http://localhost:8000/auth/signup - Signup page\") \n",
-    "print(\"- http://localhost:8000/auth/logout - Logout\")\n",
+    "print(\"- http://localhost:8000/login - Login page\")\n",
+    "print(\"- http://localhost:8000/signup - Signup page\") \n",
+    "print(\"- http://localhost:8000/logout - Logout\")\n",
     "print(\"- http://localhost:8000/ - Protected home page\")\n",
     "print(\"\\nTry creating an account and logging in!\")\n",
     "\n",
@@ -915,7 +915,7 @@
     "    \"\"\"Test the complete auth flow.\"\"\"\n",
     "    with httpx.Client(base_url=base_url, follow_redirects=True) as client:\n",
     "        # Test signup\n",
-    "        response = client.post('/auth/signup', data={\n",
+    "        response = client.post('/signup', data={\n",
     "            'name': 'Test User',\n",
     "            'email': 'test@example.com',\n",
     "            'password': 'testpass123',\n",
@@ -924,7 +924,7 @@
     "        assert response.status_code == 200\n",
     "        \n",
     "        # Test login\n",
-    "        response = client.post('/auth/login', data={\n",
+    "        response = client.post('/login', data={\n",
     "            'email': 'test@example.com',\n",
     "            'password': 'testpass123'\n",
     "        })\n",
@@ -935,8 +935,8 @@
     "        assert 'Welcome' in response.text\n",
     "        \n",
     "        # Test logout\n",
-    "        response = client.get('/auth/logout')\n",
-    "        assert response.url.path == '/auth/login'\n",
+    "        response = client.get('/logout')\n",
+    "        assert response.url.path == '/login'\n",
     "        \n",
     "    print(\"All tests passed!\")\n",
     "\n",
