--- a/nbs/04_admin_routes.ipynb
+++ b/nbs/04_admin_routes.ipynb
@@ -255,7 +255,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting admin demo server...\n",
+      "\n",
+      "Demo routes:\n",
+      "- http://localhost:8000/admin - Admin Dashboard\n",
+      "- http://localhost:8000/admin/products/ - Products List\n",
+      "- http://localhost:8000/admin/users/ - Users List\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
+       "    if(event.detail.path.includes('://')) return;\n",
+       "    htmx.config.selfRequestsOnly=false;\n",
+       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
+       "});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "from fasthtml.common import *\n",
